--- a/src/main/resources/templates/add-dep.html
+++ b/src/main/resources/templates/add-dep.html
@@ -6,6 +6,11 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <style>
+			.required{
+			    color: red;
+			}
+		</style>
     </head>
     <body>
 		<!-- Navbar with Home button and Add Employee/Dependent button -->
@@ -32,12 +37,12 @@
 			</nav>
 		</div>
 		
-		<!-- Add new Employee -->
+		<!-- Add new Dependent -->
 		<div class="container">
 			<h3>Add New Dependent</h3>
 			<form action="/addNewDep" name="newDep" method="post">
 			  <div class="form-group row">
-			  		<label for="ssn"  class="col-sm-2 col-form-label">SSN</label>
+			  		<label for="ssn"  class="col-sm-2 col-form-label">SSN <span class="required">*</span></label>
 			  		<div class="input">
 		 		        <select name="employee.ssn" id="employee.ssn" class="form-control form-control-sm" required>
 		                   <option th:each="emp: ${empList}"><a th:text="${emp.ssn}"></a></option>
@@ -45,19 +50,19 @@
 	                </div>
 			  </div>
 			  <div class="form-group row">
-				  <label for="firstName" class="col-sm-2 col-form-label">First Name</label>
-				  <input type="text" name="firstName" th:value="${newDep.firstName}? ${newDep.firstName}" required>
+				  <label for="firstName" class="col-sm-2 col-form-label">First Name <span class="required">*</span></label>
+				  <input type="text" name="firstName" pattern="[A-Za-z0-9\.'\-]{1,255}" title="Enter 1-255 characters from (A-Z,a-z,0-9,.,',-)" th:value="${newDep.firstName}? ${newDep.firstName}" required>
 			  </div>
 			  <div class="form-group row">
 				  <label for="middleInitial" class="col-sm-2 col-form-label">Middle Initial</label>
-				  <input type="text" name="middleInitial" th:value="${newDep.middleInitial}? ${newDep.middleInitial}">
+				  <input type="text" name="middleInitial" pattern="[A-Za-z]{1}" title="Enter only 1 character from (A-Z,a-z)" th:value="${newDep.middleInitial}? ${newDep.middleInitial}">
 			  </div>
 			  <div class="form-group row">
-				  <label for="lastName" class="col-sm-2 col-form-label">Last Name</label>
-				  <input type="text" name="lastName" th:value="${newDep.lastName}? ${newDep.lastName}" required>
+				  <label for="lastName" class="col-sm-2 col-form-label">Last Name <span class="required">*</span></label>
+				  <input type="text" name="lastName" pattern="[A-Za-z0-9\.'\-]{1,255}" title="Enter 1-255 characters from (A-Z,a-z,0-9,.,',-)" th:value="${newDep.lastName}? ${newDep.lastName}" required>
 			  </div>
 			  <div class="form-group row">
-			  		<label for="relationship" class="col-sm-2 col-form-label">Relationship With Employee</label>
+			  		<label for="relationship" class="col-sm-2 col-form-label">Relationship With Employee <span class="required">*</span></label>
 			  		<div class="input">
 	                    <select name="relationship" id="relationship" class="form-control form-control-sm" required>
 	                        <option th:value="Spouse">Spouse</option>
